app/javascript/scss/deferred/_difference.scss
.difference-header {
  display: flex;
  justify-content: flex-end;
  min-height: 1rem;
  width: 100%;
  background: theme(dark);
  font-size: $font-size-small;

  &--fixed {
    position: fixed;
    top: 0;
    z-index: 10;
    max-width: map-get($media-min-widths,  lg);
  }

  select {
    max-width: 200px;
    font-size: $font-size-small;
  }
}

.difference-header__item {
  padding: .5rem .75rem;
  border-left: 1px solid theme(border, 10%);
  text-decoration: none;
}

.difference-content {
  padding: 1rem;
  border-bottom-left-radius: $border-radius;
  border-bottom-right-radius: $border-radius;
  background: theme(darker);
}

.diff{overflow:auto; counter-reset: diff; color: theme(text-color-light)}
.diff ul{overflow:auto;font-size:$font-size-small;list-style:none;margin:0;padding:0;display:table;width:100%;}
.diff del, .diff ins{display:block;text-decoration:none;}
.diff li{padding: .1em; display:block;margin: 0; position: relative; min-height: 1.4em; line-height: 1.2em}
.diff li.ins{background:#dfd; color:#080}
.diff li.del{background:lighten($red, 45%); color:$red}
.diff li.unchanged:hover{background: theme(dark)}
.diff del, .diff ins, .diff span{white-space:pre-wrap;font-family:courier;}
.diff del strong{font-weight:normal;background:#fcc;}
.diff ins strong{font-weight:normal;background:#9f9;}
.diff li.diff-comment { display: none; }
.diff li.diff-block-info { background: none repeat scroll 0 0 gray; }
.diff.hide-unchanged li.unchanged { opacity: 0; height: 0; min-height: 0; padding: 0; overflow: hidden; }

.line-count .diff li { padding-left: 4em; }
.line-count .diff li:not(.del) {
  counter-increment: diff;

  &::before {
    content: counter(diff);
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    padding-right: 1em;
    padding-top: .1em;
    color: theme(text-color-dark);
  }
}

